# _

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements_dev.txt  setup.py
.github/workflows/: build.yaml  ci.yaml  lint.yaml  publish-pypi.yaml  release.yaml  test.yaml
src/underscores/: _.py  __init__.py  __main__.py
tests/: test_execute.py  test_generate.py  test_underscores.py
tests/code/: decoded.py  encoded.py
underscores/: _.pth  _.py  __init__.py
