[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "underscores"
dynamic = ["version"]
description = "_ allows you to write Python code using only _."
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"
authors = [{ name = "Lemonyte" }]
keywords = ["_", "underscore", "encoding", "joke"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/lemonyte/_"

[tool.setuptools]
packages = ["underscores"]

[tool.setuptools.dynamic]
version = { attr = "underscores.__version__" }

[tool.ruff]
select = ["ALL"]
ignore = ["A", "D", "T"]
src = ["src"]
line-length = 119
target-version = "py38"
fix = true

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101", "S603"]

[tool.black]
line-length = 119

[tool.pyright]
venvPath = "."
venv = ".venv"
