
[project]
name = "underscores"
version = "0.0.4"
description = "_ allows you to write Python code using only _."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">=3.9"
authors = [{ name = "Lemonyte", email = "contact@lemonyte.com" }]
keywords = ["_", "underscore", "encoding", "joke"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/lemonyte/_"

[project.scripts]
_ = "underscores.__main__:cmd"

[dependency-groups]
dev = [
    "prek>=0.2.27",
    "pytest-cov~=7.0.0",
    "pytest~=8.4.2",
    "ty>=0.0.2",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
data = { purelib = "purelib" }

[tool.ruff]
src = ["src"]
exclude = ["tests/code/**"]
line-length = 119
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["A", "D", "T"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101", "S603"]

[tool.ty.src]
exclude = ["tests/code/**"]
